assets/css/input.css
body {
    min-height: 100vh;
    background-image: linear-gradient(to bottom, rgb(43, 39, 39), rgb(126, 122, 122), gray);
    background-repeat: no-repeat;
}

h1 {
    color: rgb(255, 255, 255);
    display: flex;
    text-align: center;
    justify-content: center;
    font-weight: bold;
    font-size: 410%;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-shadow: 3px 3px 3px black;
    margin-top: 20px;
}

nav {
    margin-top: 45px;
    display: flex;
    justify-content: center;
    
}

nav ul {
    margin: 0 auto;
    padding: 5px;
}

nav li {
    list-style: none;
    float: left;
    margin: 0 20px;
    width: 200px;
    text-align: center;
    margin: 7px 49px auto;
}

nav a {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    display:block;
    color: rgb(255, 255, 255);
    font-size: 150%;
    text-decoration: none;
    border: solid 3px rgb(11, 211, 44);
    box-shadow: 2px 0 4px rgb(11, 211, 44);
    border-radius: 7px;
    padding: 5px 0;
    text-shadow: 2px 3px 3px black;
    background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
    background-repeat: no-repeat;
}

.formBox {
    width: 590px;
    height: 415px;
    border: solid 3px rgb(11, 211, 44);
    box-shadow: 2px 0 4px rgb(11, 211, 44);
    background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
    border-radius: 12px;
    position: relative;
    left: 480px;
    top: 100px;
}


form {
   position: relative;
   color: white;
   left: 150px;
   top: 90px;
   
}


#companyName {
border-radius: 7px;
width: 300px;
height: 50px;
}

#payRate {
border-radius: 7px;
width: 300px;
height: 50px;
}

#submit {
   position: relative;
   left: 99px;
   top: 30px;
   background-color: grey;
   border: solid 2px rgb(255, 255, 255);
   color: white;
   width: 100px;
   height: 50px;
   border-radius: 7px;
}

#submit:hover {
    transform: scale(1.1);
    transition: transform 0.2s ease-in-out;
}

#submit:active {
transform: none;


}



nav a:hover {
    color: yellow;
    text-shadow: 2px 2px 2px rgb(97, 13, 207);
    transform: scale(1.1);
    transition: transform 0.2s ease-in-out;
}

